articles module & page updates

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,5 +4,11 @@
     "Produk": "Products",
     "Layanan": "Services",
     "Berita & Artikel": "News & Articles",
-    "Kontak": "Contact"
+    "Kontak": "Contact",
+
+    "Ukuran / Kemasan": "Size / Packaging",
+    "Request Download Catalog": "Request Download Catalog",
+    "Lanjut Baca": "Read More",
+    "Selengkapnya": "See More",
+    "Artikel Lain": "Other Article"
 }
