New updatesss before live

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,9 +6,19 @@
     "Berita & Artikel": "News & Articles",
     "Kontak": "Contact",
 
+    "Pencapaian Kami": "Our Achievements",
+    "Jelajahi produk kami untuk": "Explore our products",
+    "mengetahui kami lebih dalam": "to learn more about us",
+    "Produk Kami" : "Our Products",
+
+
     "Ukuran / Kemasan": "Size / Packaging",
     "Request Download Catalog": "Request Download Catalog",
     "Lanjut Baca": "Read More",
     "Selengkapnya": "See More",
-    "Artikel Lain": "Other Article"
+    "Artikel Lain": "Other Articles",
+    "Info Lebih" : "More Info",
+
+    "Pilih Hewan" : "Select Animals",
+    "Pilih Kategori" : "Select Category"
 }
