--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,9 @@
     "mengetahui kami lebih dalam": "to learn more about us",
     "Produk Kami" : "Our Products",
 
+    "Produk Unggulan" : "Featured Products",
+
+    "Hubungi Kami" : "Contact Us",
 
     "Ukuran / Kemasan": "Size / Packaging",
     "Request Download Catalog": "Request Download Catalog",
