fix layout and lang

--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
     "Produk Kami" : "Our Products",
 
     "Produk Unggulan" : "Featured Products",
+    "Produk Lainnya" : "Other Products",
 
     "Hubungi Kami" : "Contact Us",
 
