--- a/lang/en.json
+++ b/lang/en.json
@@ -24,5 +24,6 @@
     "Info Lebih" : "More Info",
 
     "Pilih Hewan" : "Select Animals",
-    "Pilih Kategori" : "Select Category"
+    "Pilih Kategori" : "Select Category",
+    "Pilih Topik" : "Topic Selection"
 }
