update from client

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,5 +25,11 @@
 
     "Pilih Hewan" : "Select Animals",
     "Pilih Kategori" : "Select Category",
-    "Pilih Topik" : "Topic Selection"
+    "Pilih Topik" : "Topic Selection",
+    "Social media kami" : "Our Social Media",
+    "Tanya Kami" : "Contact Us",
+    "Nama" : "Name",
+    "No. Telp" : "Phone Number",
+    "Pesan Anda" : "Your Message",
+    "Kirim" : "Send"
 }
